HSEARCH-3241 Get surefire/failsafe Maven properties in line with Search 5